// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentPackConstraints /> should render with created constraints 1`] = `
.c0.table > thead > tr > th,
.c0.table > tbody > tr > th,
.c0.table > tfoot > tr > th,
.c0.table > thead > tr > td,
.c0.table > tbody > tr > td,
.c0.table > tfoot > tr > td {
  border-top-color: #f0f0f0;
}

.c0.table > thead > tr > th {
  border-bottom-color: #f0f0f0;
}

.c0.table > tbody > tr {
  background-color: #fafafa;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
}

.c0.table > tbody + tbody {
  border-top-color: #f0f0f0;
}

.c0.table .table {
  background-color: #fafafa;
}

.c0.table-bordered {
  border-color: #f0f0f0;
}

.c0.table-bordered > thead > tr > td,
.c0.table-bordered > tfoot > tr > td,
.c0.table-bordered > tbody > tr > td,
.c0.table-bordered > thead > tr > th,
.c0.table-bordered > tfoot > tr > th,
.c0.table-bordered > tbody > tr > th {
  border-color: #f0f0f0;
}

.c0.table-striped > tbody > tr:nth-of-type(odd) {
  background-color: #f0f0f0;
}

.c0.table-hover > tbody > tr:hover {
  background-color: #f5f5f5;
}

.c0.table > thead > tr > td.active,
.c0.table > tfoot > tr > td.active,
.c0.table > tbody > tr > td.active,
.c0.table > thead > tr > th.active,
.c0.table > tfoot > tr > th.active,
.c0.table > tbody > tr > th.active,
.c0.table > thead > tr.active > td,
.c0.table > tfoot > tr.active > td,
.c0.table > tbody > tr.active > td,
.c0.table > thead > tr.active > th,
.c0.table > tfoot > tr.active > th,
.c0.table > tbody > tr.active > th {
  background-color: #e6e6e6;
}

.c0.table-hover > tbody > tr > td.active:hover,
.c0.table-hover > tbody > tr > th.active:hover,
.c0.table-hover > tbody > tr.active:hover > td,
.c0.table-hover > tbody > tr:hover > .active,
.c0.table-hover > tbody > tr.active:hover > th {
  background-color: #d0d0d0;
}

.c0.table > thead > tr > td.success,
.c0.table > tfoot > tr > td.success,
.c0.table > tbody > tr > td.success,
.c0.table > thead > tr > th.success,
.c0.table > tfoot > tr > th.success,
.c0.table > tbody > tr > th.success,
.c0.table > thead > tr.success > td,
.c0.table > tfoot > tr.success > td,
.c0.table > tbody > tr.success > td,
.c0.table > thead > tr.success > th,
.c0.table > tfoot > tr.success > th,
.c0.table > tbody > tr.success > th {
  background-color: #ddeddf;
}

.c0.table-hover > tbody > tr > td.success:hover,
.c0.table-hover > tbody > tr > th.success:hover,
.c0.table-hover > tbody > tr.success:hover > td,
.c0.table-hover > tbody > tr:hover > .success,
.c0.table-hover > tbody > tr.success:hover > th {
  background-color: #bddec2;
}

.c0.table > thead > tr > td.info,
.c0.table > tfoot > tr > td.info,
.c0.table > tbody > tr > td.info,
.c0.table > thead > tr > th.info,
.c0.table > tfoot > tr > th.info,
.c0.table > tbody > tr > th.info,
.c0.table > thead > tr.info > td,
.c0.table > tfoot > tr.info > td,
.c0.table > tbody > tr.info > td,
.c0.table > thead > tr.info > th,
.c0.table > tfoot > tr.info > th,
.c0.table > tbody > tr.info > th {
  background-color: #dde2f0;
}

.c0.table-hover > tbody > tr > td.info:hover,
.c0.table-hover > tbody > tr > th.info:hover,
.c0.table-hover > tbody > tr.info:hover > td,
.c0.table-hover > tbody > tr:hover > .info,
.c0.table-hover > tbody > tr.info:hover > th {
  background-color: #bdc8e4;
}

.c0.table > thead > tr > td.warning,
.c0.table > tfoot > tr > td.warning,
.c0.table > tbody > tr > td.warning,
.c0.table > thead > tr > th.warning,
.c0.table > tfoot > tr > th.warning,
.c0.table > tbody > tr > th.warning,
.c0.table > thead > tr.warning > td,
.c0.table > tfoot > tr.warning > td,
.c0.table > tbody > tr.warning > td,
.c0.table > thead > tr.warning > th,
.c0.table > tfoot > tr.warning > th,
.c0.table > tbody > tr.warning > th {
  background-color: #fff5dd;
}

.c0.table-hover > tbody > tr > td.warning:hover,
.c0.table-hover > tbody > tr > th.warning:hover,
.c0.table-hover > tbody > tr.warning:hover > td,
.c0.table-hover > tbody > tr:hover > .warning,
.c0.table-hover > tbody > tr.warning:hover > th {
  background-color: #ffecbd;
}

.c0.table > thead > tr > td.danger,
.c0.table > tfoot > tr > td.danger,
.c0.table > tbody > tr > td.danger,
.c0.table > thead > tr > th.danger,
.c0.table > tfoot > tr > th.danger,
.c0.table > tbody > tr > th.danger,
.c0.table > thead > tr.danger > td,
.c0.table > tfoot > tr.danger > td,
.c0.table > tbody > tr.danger > td,
.c0.table > thead > tr.danger > th,
.c0.table > tfoot > tr.danger > th,
.c0.table > tbody > tr.danger > th {
  background-color: #eddddd;
}

.c0.table-hover > tbody > tr > td.danger:hover,
.c0.table-hover > tbody > tr > th.danger:hover,
.c0.table-hover > tbody > tr.danger:hover > td,
.c0.table-hover > tbody > tr:hover > .danger,
.c0.table-hover > tbody > tr.danger:hover > th {
  background-color: #debdbd;
}

.c1 {
  background-color: #ad0707;
}

.c2 {
  background-color: #00ae42;
}

<ContentPackConstraints
  constraints={
    Array [
      Object {
        "constraint": Object {
          "fulfilled": true,
          "type": "server-version",
          "version": ">=3.0.0-alpha.2+af8d8e0",
        },
        "fulfilled": true,
      },
      Object {
        "constraint": Object {
          "fulfilled": false,
          "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
          "type": "plugin-version",
          "version": ">=3.0.0-alpha.2",
        },
        "fulfilled": false,
      },
    ]
  }
  isFulfilled={false}
>
  <div>
    <h2>
      Constraints
    </h2>
    <br />
    <br />
    <DataTable
      className=""
      dataRowFormatter={[Function]}
      displayKey="value"
      filterBy=""
      filterKeys={Array []}
      filterLabel="Filter"
      filterSuggestions={Array []}
      headerCellFormatter={[Function]}
      headers={
        Array [
          "Name",
          "Type",
          "Version",
          "Fulfilled",
        ]
      }
      id="content-packs-constraints"
      noDataText="No data available."
      rowClassName=""
      rows={
        Array [
          Object {
            "fulfilled": false,
            "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
            "type": "plugin-version",
            "version": ">=3.0.0-alpha.2",
          },
          Object {
            "fulfilled": true,
            "type": "server-version",
            "version": ">=3.0.0-alpha.2+af8d8e0",
          },
        ]
      }
      sortBy={[Function]}
      useResponsiveTable={true}
    >
      <div>
        <div
          className="row "
        >
          <div
            className="col-md-12"
          >
            <div
              className="data-table table-responsive"
              id="content-packs-constraints"
            >
              <DataTable__StyledTable
                className="table "
              >
                <table
                  className="c0 table "
                >
                  <thead>
                    <tr>
                      <DataTableElement
                        element="Name"
                        formatter={[Function]}
                        index={0}
                        key="header-0"
                      >
                        <th>
                          Name
                        </th>
                      </DataTableElement>
                      <DataTableElement
                        element="Type"
                        formatter={[Function]}
                        index={1}
                        key="header-1"
                      >
                        <th>
                          Type
                        </th>
                      </DataTableElement>
                      <DataTableElement
                        element="Version"
                        formatter={[Function]}
                        index={2}
                        key="header-2"
                      >
                        <th>
                          Version
                        </th>
                      </DataTableElement>
                      <DataTableElement
                        element="Fulfilled"
                        formatter={[Function]}
                        index={3}
                        key="header-3"
                      >
                        <th>
                          Fulfilled
                        </th>
                      </DataTableElement>
                    </tr>
                  </thead>
                  <tbody>
                    <DataTableElement
                      element={
                        Object {
                          "fulfilled": false,
                          "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
                          "type": "plugin-version",
                          "version": ">=3.0.0-alpha.2",
                        }
                      }
                      formatter={[Function]}
                      index={0}
                      key="row-0"
                    >
                      <tr>
                        <td>
                          org.graylog.plugins.threatintel.ThreatIntelPlugin
                        </td>
                        <td>
                          plugin-version
                        </td>
                        <td>
                          &gt;=3.0.0-alpha.2
                        </td>
                        <td>
                          <ContentPackConstraints__StyledBadge
                            isFulfilled={false}
                          >
                            <Component
                              className="c1"
                              isFulfilled={false}
                            >
                              <ForwardRef
                                className="c1"
                              >
                                <Badge__StyledBadge
                                  className="c1"
                                >
                                  <Badge
                                    bsClass="badge"
                                    className="c1"
                                    pullRight={false}
                                  >
                                    <span
                                      className="c1 badge"
                                    >
                                      <Icon
                                        name="times"
                                        type="solid"
                                      >
                                        <FontAwesomeIcon
                                          icon={
                                            Object {
                                              "iconName": "times",
                                              "prefix": "fas",
                                            }
                                          }
                                        >
                                          <svg
                                            className="svg-inline--fa fa-times"
                                          />
                                        </FontAwesomeIcon>
                                      </Icon>
                                    </span>
                                  </Badge>
                                </Badge__StyledBadge>
                              </ForwardRef>
                            </Component>
                          </ContentPackConstraints__StyledBadge>
                        </td>
                      </tr>
                    </DataTableElement>
                    <DataTableElement
                      element={
                        Object {
                          "fulfilled": true,
                          "type": "server-version",
                          "version": ">=3.0.0-alpha.2+af8d8e0",
                        }
                      }
                      formatter={[Function]}
                      index={1}
                      key="row-1"
                    >
                      <tr>
                        <td>
                          Graylog
                        </td>
                        <td>
                          server-version
                        </td>
                        <td>
                          &gt;=3.0.0-alpha.2+af8d8e0
                        </td>
                        <td>
                          <ContentPackConstraints__StyledBadge
                            isFulfilled={true}
                          >
                            <Component
                              className="c2"
                              isFulfilled={true}
                            >
                              <ForwardRef
                                className="c2"
                              >
                                <Badge__StyledBadge
                                  className="c2"
                                >
                                  <Badge
                                    bsClass="badge"
                                    className="c2"
                                    pullRight={false}
                                  >
                                    <span
                                      className="c2 badge"
                                    >
                                      <Icon
                                        name="check"
                                        type="solid"
                                      >
                                        <FontAwesomeIcon
                                          icon={
                                            Object {
                                              "iconName": "check",
                                              "prefix": "fas",
                                            }
                                          }
                                        >
                                          <svg
                                            className="svg-inline--fa fa-check"
                                          />
                                        </FontAwesomeIcon>
                                      </Icon>
                                    </span>
                                  </Badge>
                                </Badge__StyledBadge>
                              </ForwardRef>
                            </Component>
                          </ContentPackConstraints__StyledBadge>
                        </td>
                      </tr>
                    </DataTableElement>
                  </tbody>
                </table>
              </DataTable__StyledTable>
            </div>
          </div>
        </div>
      </div>
    </DataTable>
  </div>
</ContentPackConstraints>
`;

exports[`<ContentPackConstraints /> should render with new constraints with forced fulfillment 1`] = `
.c0.table > thead > tr > th,
.c0.table > tbody > tr > th,
.c0.table > tfoot > tr > th,
.c0.table > thead > tr > td,
.c0.table > tbody > tr > td,
.c0.table > tfoot > tr > td {
  border-top-color: #f0f0f0;
}

.c0.table > thead > tr > th {
  border-bottom-color: #f0f0f0;
}

.c0.table > tbody > tr {
  background-color: #fafafa;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
}

.c0.table > tbody + tbody {
  border-top-color: #f0f0f0;
}

.c0.table .table {
  background-color: #fafafa;
}

.c0.table-bordered {
  border-color: #f0f0f0;
}

.c0.table-bordered > thead > tr > td,
.c0.table-bordered > tfoot > tr > td,
.c0.table-bordered > tbody > tr > td,
.c0.table-bordered > thead > tr > th,
.c0.table-bordered > tfoot > tr > th,
.c0.table-bordered > tbody > tr > th {
  border-color: #f0f0f0;
}

.c0.table-striped > tbody > tr:nth-of-type(odd) {
  background-color: #f0f0f0;
}

.c0.table-hover > tbody > tr:hover {
  background-color: #f5f5f5;
}

.c0.table > thead > tr > td.active,
.c0.table > tfoot > tr > td.active,
.c0.table > tbody > tr > td.active,
.c0.table > thead > tr > th.active,
.c0.table > tfoot > tr > th.active,
.c0.table > tbody > tr > th.active,
.c0.table > thead > tr.active > td,
.c0.table > tfoot > tr.active > td,
.c0.table > tbody > tr.active > td,
.c0.table > thead > tr.active > th,
.c0.table > tfoot > tr.active > th,
.c0.table > tbody > tr.active > th {
  background-color: #e6e6e6;
}

.c0.table-hover > tbody > tr > td.active:hover,
.c0.table-hover > tbody > tr > th.active:hover,
.c0.table-hover > tbody > tr.active:hover > td,
.c0.table-hover > tbody > tr:hover > .active,
.c0.table-hover > tbody > tr.active:hover > th {
  background-color: #d0d0d0;
}

.c0.table > thead > tr > td.success,
.c0.table > tfoot > tr > td.success,
.c0.table > tbody > tr > td.success,
.c0.table > thead > tr > th.success,
.c0.table > tfoot > tr > th.success,
.c0.table > tbody > tr > th.success,
.c0.table > thead > tr.success > td,
.c0.table > tfoot > tr.success > td,
.c0.table > tbody > tr.success > td,
.c0.table > thead > tr.success > th,
.c0.table > tfoot > tr.success > th,
.c0.table > tbody > tr.success > th {
  background-color: #ddeddf;
}

.c0.table-hover > tbody > tr > td.success:hover,
.c0.table-hover > tbody > tr > th.success:hover,
.c0.table-hover > tbody > tr.success:hover > td,
.c0.table-hover > tbody > tr:hover > .success,
.c0.table-hover > tbody > tr.success:hover > th {
  background-color: #bddec2;
}

.c0.table > thead > tr > td.info,
.c0.table > tfoot > tr > td.info,
.c0.table > tbody > tr > td.info,
.c0.table > thead > tr > th.info,
.c0.table > tfoot > tr > th.info,
.c0.table > tbody > tr > th.info,
.c0.table > thead > tr.info > td,
.c0.table > tfoot > tr.info > td,
.c0.table > tbody > tr.info > td,
.c0.table > thead > tr.info > th,
.c0.table > tfoot > tr.info > th,
.c0.table > tbody > tr.info > th {
  background-color: #dde2f0;
}

.c0.table-hover > tbody > tr > td.info:hover,
.c0.table-hover > tbody > tr > th.info:hover,
.c0.table-hover > tbody > tr.info:hover > td,
.c0.table-hover > tbody > tr:hover > .info,
.c0.table-hover > tbody > tr.info:hover > th {
  background-color: #bdc8e4;
}

.c0.table > thead > tr > td.warning,
.c0.table > tfoot > tr > td.warning,
.c0.table > tbody > tr > td.warning,
.c0.table > thead > tr > th.warning,
.c0.table > tfoot > tr > th.warning,
.c0.table > tbody > tr > th.warning,
.c0.table > thead > tr.warning > td,
.c0.table > tfoot > tr.warning > td,
.c0.table > tbody > tr.warning > td,
.c0.table > thead > tr.warning > th,
.c0.table > tfoot > tr.warning > th,
.c0.table > tbody > tr.warning > th {
  background-color: #fff5dd;
}

.c0.table-hover > tbody > tr > td.warning:hover,
.c0.table-hover > tbody > tr > th.warning:hover,
.c0.table-hover > tbody > tr.warning:hover > td,
.c0.table-hover > tbody > tr:hover > .warning,
.c0.table-hover > tbody > tr.warning:hover > th {
  background-color: #ffecbd;
}

.c0.table > thead > tr > td.danger,
.c0.table > tfoot > tr > td.danger,
.c0.table > tbody > tr > td.danger,
.c0.table > thead > tr > th.danger,
.c0.table > tfoot > tr > th.danger,
.c0.table > tbody > tr > th.danger,
.c0.table > thead > tr.danger > td,
.c0.table > tfoot > tr.danger > td,
.c0.table > tbody > tr.danger > td,
.c0.table > thead > tr.danger > th,
.c0.table > tfoot > tr.danger > th,
.c0.table > tbody > tr.danger > th {
  background-color: #eddddd;
}

.c0.table-hover > tbody > tr > td.danger:hover,
.c0.table-hover > tbody > tr > th.danger:hover,
.c0.table-hover > tbody > tr.danger:hover > td,
.c0.table-hover > tbody > tr:hover > .danger,
.c0.table-hover > tbody > tr.danger:hover > th {
  background-color: #debdbd;
}

.c1 {
  background-color: #00ae42;
}

<ContentPackConstraints
  constraints={
    Array [
      Object {
        "fulfilled": true,
        "type": "server-version",
        "version": ">=3.0.0-alpha.2+af8d8e0",
      },
      Object {
        "fulfilled": true,
        "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
        "type": "plugin-version",
        "version": ">=3.0.0-alpha.2",
      },
    ]
  }
  isFulfilled={true}
>
  <div>
    <h2>
      Constraints
    </h2>
    <br />
    <br />
    <DataTable
      className=""
      dataRowFormatter={[Function]}
      displayKey="value"
      filterBy=""
      filterKeys={Array []}
      filterLabel="Filter"
      filterSuggestions={Array []}
      headerCellFormatter={[Function]}
      headers={
        Array [
          "Name",
          "Type",
          "Version",
          "Fulfilled",
        ]
      }
      id="content-packs-constraints"
      noDataText="No data available."
      rowClassName=""
      rows={
        Array [
          Object {
            "fulfilled": true,
            "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
            "type": "plugin-version",
            "version": ">=3.0.0-alpha.2",
          },
          Object {
            "fulfilled": true,
            "type": "server-version",
            "version": ">=3.0.0-alpha.2+af8d8e0",
          },
        ]
      }
      sortBy={[Function]}
      useResponsiveTable={true}
    >
      <div>
        <div
          className="row "
        >
          <div
            className="col-md-12"
          >
            <div
              className="data-table table-responsive"
              id="content-packs-constraints"
            >
              <DataTable__StyledTable
                className="table "
              >
                <table
                  className="c0 table "
                >
                  <thead>
                    <tr>
                      <DataTableElement
                        element="Name"
                        formatter={[Function]}
                        index={0}
                        key="header-0"
                      >
                        <th>
                          Name
                        </th>
                      </DataTableElement>
                      <DataTableElement
                        element="Type"
                        formatter={[Function]}
                        index={1}
                        key="header-1"
                      >
                        <th>
                          Type
                        </th>
                      </DataTableElement>
                      <DataTableElement
                        element="Version"
                        formatter={[Function]}
                        index={2}
                        key="header-2"
                      >
                        <th>
                          Version
                        </th>
                      </DataTableElement>
                      <DataTableElement
                        element="Fulfilled"
                        formatter={[Function]}
                        index={3}
                        key="header-3"
                      >
                        <th>
                          Fulfilled
                        </th>
                      </DataTableElement>
                    </tr>
                  </thead>
                  <tbody>
                    <DataTableElement
                      element={
                        Object {
                          "fulfilled": true,
                          "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
                          "type": "plugin-version",
                          "version": ">=3.0.0-alpha.2",
                        }
                      }
                      formatter={[Function]}
                      index={0}
                      key="row-0"
                    >
                      <tr>
                        <td>
                          org.graylog.plugins.threatintel.ThreatIntelPlugin
                        </td>
                        <td>
                          plugin-version
                        </td>
                        <td>
                          &gt;=3.0.0-alpha.2
                        </td>
                        <td>
                          <ContentPackConstraints__StyledBadge
                            isFulfilled={true}
                          >
                            <Component
                              className="c1"
                              isFulfilled={true}
                            >
                              <ForwardRef
                                className="c1"
                              >
                                <Badge__StyledBadge
                                  className="c1"
                                >
                                  <Badge
                                    bsClass="badge"
                                    className="c1"
                                    pullRight={false}
                                  >
                                    <span
                                      className="c1 badge"
                                    >
                                      <Icon
                                        name="check"
                                        type="solid"
                                      >
                                        <FontAwesomeIcon
                                          icon={
                                            Object {
                                              "iconName": "check",
                                              "prefix": "fas",
                                            }
                                          }
                                        >
                                          <svg
                                            className="svg-inline--fa fa-check"
                                          />
                                        </FontAwesomeIcon>
                                      </Icon>
                                    </span>
                                  </Badge>
                                </Badge__StyledBadge>
                              </ForwardRef>
                            </Component>
                          </ContentPackConstraints__StyledBadge>
                        </td>
                      </tr>
                    </DataTableElement>
                    <DataTableElement
                      element={
                        Object {
                          "fulfilled": true,
                          "type": "server-version",
                          "version": ">=3.0.0-alpha.2+af8d8e0",
                        }
                      }
                      formatter={[Function]}
                      index={1}
                      key="row-1"
                    >
                      <tr>
                        <td>
                          Graylog
                        </td>
                        <td>
                          server-version
                        </td>
                        <td>
                          &gt;=3.0.0-alpha.2+af8d8e0
                        </td>
                        <td>
                          <ContentPackConstraints__StyledBadge
                            isFulfilled={true}
                          >
                            <Component
                              className="c1"
                              isFulfilled={true}
                            >
                              <ForwardRef
                                className="c1"
                              >
                                <Badge__StyledBadge
                                  className="c1"
                                >
                                  <Badge
                                    bsClass="badge"
                                    className="c1"
                                    pullRight={false}
                                  >
                                    <span
                                      className="c1 badge"
                                    >
                                      <Icon
                                        name="check"
                                        type="solid"
                                      >
                                        <FontAwesomeIcon
                                          icon={
                                            Object {
                                              "iconName": "check",
                                              "prefix": "fas",
                                            }
                                          }
                                        >
                                          <svg
                                            className="svg-inline--fa fa-check"
                                          />
                                        </FontAwesomeIcon>
                                      </Icon>
                                    </span>
                                  </Badge>
                                </Badge__StyledBadge>
                              </ForwardRef>
                            </Component>
                          </ContentPackConstraints__StyledBadge>
                        </td>
                      </tr>
                    </DataTableElement>
                  </tbody>
                </table>
              </DataTable__StyledTable>
            </div>
          </div>
        </div>
      </div>
    </DataTable>
  </div>
</ContentPackConstraints>
`;

exports[`<ContentPackConstraints /> should render with new constraints without forced fulfillment 1`] = `
.c0.table > thead > tr > th,
.c0.table > tbody > tr > th,
.c0.table > tfoot > tr > th,
.c0.table > thead > tr > td,
.c0.table > tbody > tr > td,
.c0.table > tfoot > tr > td {
  border-top-color: #f0f0f0;
}

.c0.table > thead > tr > th {
  border-bottom-color: #f0f0f0;
}

.c0.table > tbody > tr {
  background-color: #fafafa;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
}

.c0.table > tbody + tbody {
  border-top-color: #f0f0f0;
}

.c0.table .table {
  background-color: #fafafa;
}

.c0.table-bordered {
  border-color: #f0f0f0;
}

.c0.table-bordered > thead > tr > td,
.c0.table-bordered > tfoot > tr > td,
.c0.table-bordered > tbody > tr > td,
.c0.table-bordered > thead > tr > th,
.c0.table-bordered > tfoot > tr > th,
.c0.table-bordered > tbody > tr > th {
  border-color: #f0f0f0;
}

.c0.table-striped > tbody > tr:nth-of-type(odd) {
  background-color: #f0f0f0;
}

.c0.table-hover > tbody > tr:hover {
  background-color: #f5f5f5;
}

.c0.table > thead > tr > td.active,
.c0.table > tfoot > tr > td.active,
.c0.table > tbody > tr > td.active,
.c0.table > thead > tr > th.active,
.c0.table > tfoot > tr > th.active,
.c0.table > tbody > tr > th.active,
.c0.table > thead > tr.active > td,
.c0.table > tfoot > tr.active > td,
.c0.table > tbody > tr.active > td,
.c0.table > thead > tr.active > th,
.c0.table > tfoot > tr.active > th,
.c0.table > tbody > tr.active > th {
  background-color: #e6e6e6;
}

.c0.table-hover > tbody > tr > td.active:hover,
.c0.table-hover > tbody > tr > th.active:hover,
.c0.table-hover > tbody > tr.active:hover > td,
.c0.table-hover > tbody > tr:hover > .active,
.c0.table-hover > tbody > tr.active:hover > th {
  background-color: #d0d0d0;
}

.c0.table > thead > tr > td.success,
.c0.table > tfoot > tr > td.success,
.c0.table > tbody > tr > td.success,
.c0.table > thead > tr > th.success,
.c0.table > tfoot > tr > th.success,
.c0.table > tbody > tr > th.success,
.c0.table > thead > tr.success > td,
.c0.table > tfoot > tr.success > td,
.c0.table > tbody > tr.success > td,
.c0.table > thead > tr.success > th,
.c0.table > tfoot > tr.success > th,
.c0.table > tbody > tr.success > th {
  background-color: #ddeddf;
}

.c0.table-hover > tbody > tr > td.success:hover,
.c0.table-hover > tbody > tr > th.success:hover,
.c0.table-hover > tbody > tr.success:hover > td,
.c0.table-hover > tbody > tr:hover > .success,
.c0.table-hover > tbody > tr.success:hover > th {
  background-color: #bddec2;
}

.c0.table > thead > tr > td.info,
.c0.table > tfoot > tr > td.info,
.c0.table > tbody > tr > td.info,
.c0.table > thead > tr > th.info,
.c0.table > tfoot > tr > th.info,
.c0.table > tbody > tr > th.info,
.c0.table > thead > tr.info > td,
.c0.table > tfoot > tr.info > td,
.c0.table > tbody > tr.info > td,
.c0.table > thead > tr.info > th,
.c0.table > tfoot > tr.info > th,
.c0.table > tbody > tr.info > th {
  background-color: #dde2f0;
}

.c0.table-hover > tbody > tr > td.info:hover,
.c0.table-hover > tbody > tr > th.info:hover,
.c0.table-hover > tbody > tr.info:hover > td,
.c0.table-hover > tbody > tr:hover > .info,
.c0.table-hover > tbody > tr.info:hover > th {
  background-color: #bdc8e4;
}

.c0.table > thead > tr > td.warning,
.c0.table > tfoot > tr > td.warning,
.c0.table > tbody > tr > td.warning,
.c0.table > thead > tr > th.warning,
.c0.table > tfoot > tr > th.warning,
.c0.table > tbody > tr > th.warning,
.c0.table > thead > tr.warning > td,
.c0.table > tfoot > tr.warning > td,
.c0.table > tbody > tr.warning > td,
.c0.table > thead > tr.warning > th,
.c0.table > tfoot > tr.warning > th,
.c0.table > tbody > tr.warning > th {
  background-color: #fff5dd;
}

.c0.table-hover > tbody > tr > td.warning:hover,
.c0.table-hover > tbody > tr > th.warning:hover,
.c0.table-hover > tbody > tr.warning:hover > td,
.c0.table-hover > tbody > tr:hover > .warning,
.c0.table-hover > tbody > tr.warning:hover > th {
  background-color: #ffecbd;
}

.c0.table > thead > tr > td.danger,
.c0.table > tfoot > tr > td.danger,
.c0.table > tbody > tr > td.danger,
.c0.table > thead > tr > th.danger,
.c0.table > tfoot > tr > th.danger,
.c0.table > tbody > tr > th.danger,
.c0.table > thead > tr.danger > td,
.c0.table > tfoot > tr.danger > td,
.c0.table > tbody > tr.danger > td,
.c0.table > thead > tr.danger > th,
.c0.table > tfoot > tr.danger > th,
.c0.table > tbody > tr.danger > th {
  background-color: #eddddd;
}

.c0.table-hover > tbody > tr > td.danger:hover,
.c0.table-hover > tbody > tr > th.danger:hover,
.c0.table-hover > tbody > tr.danger:hover > td,
.c0.table-hover > tbody > tr:hover > .danger,
.c0.table-hover > tbody > tr.danger:hover > th {
  background-color: #debdbd;
}

.c1 {
  background-color: #ad0707;
}

<ContentPackConstraints
  constraints={
    Array [
      Object {
        "fulfilled": undefined,
        "type": "server-version",
        "version": ">=3.0.0-alpha.2+af8d8e0",
      },
      Object {
        "fulfilled": undefined,
        "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
        "type": "plugin-version",
        "version": ">=3.0.0-alpha.2",
      },
    ]
  }
  isFulfilled={false}
>
  <div>
    <h2>
      Constraints
    </h2>
    <br />
    <br />
    <DataTable
      className=""
      dataRowFormatter={[Function]}
      displayKey="value"
      filterBy=""
      filterKeys={Array []}
      filterLabel="Filter"
      filterSuggestions={Array []}
      headerCellFormatter={[Function]}
      headers={
        Array [
          "Name",
          "Type",
          "Version",
          "Fulfilled",
        ]
      }
      id="content-packs-constraints"
      noDataText="No data available."
      rowClassName=""
      rows={
        Array [
          Object {
            "fulfilled": undefined,
            "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
            "type": "plugin-version",
            "version": ">=3.0.0-alpha.2",
          },
          Object {
            "fulfilled": undefined,
            "type": "server-version",
            "version": ">=3.0.0-alpha.2+af8d8e0",
          },
        ]
      }
      sortBy={[Function]}
      useResponsiveTable={true}
    >
      <div>
        <div
          className="row "
        >
          <div
            className="col-md-12"
          >
            <div
              className="data-table table-responsive"
              id="content-packs-constraints"
            >
              <DataTable__StyledTable
                className="table "
              >
                <table
                  className="c0 table "
                >
                  <thead>
                    <tr>
                      <DataTableElement
                        element="Name"
                        formatter={[Function]}
                        index={0}
                        key="header-0"
                      >
                        <th>
                          Name
                        </th>
                      </DataTableElement>
                      <DataTableElement
                        element="Type"
                        formatter={[Function]}
                        index={1}
                        key="header-1"
                      >
                        <th>
                          Type
                        </th>
                      </DataTableElement>
                      <DataTableElement
                        element="Version"
                        formatter={[Function]}
                        index={2}
                        key="header-2"
                      >
                        <th>
                          Version
                        </th>
                      </DataTableElement>
                      <DataTableElement
                        element="Fulfilled"
                        formatter={[Function]}
                        index={3}
                        key="header-3"
                      >
                        <th>
                          Fulfilled
                        </th>
                      </DataTableElement>
                    </tr>
                  </thead>
                  <tbody>
                    <DataTableElement
                      element={
                        Object {
                          "fulfilled": undefined,
                          "plugin": "org.graylog.plugins.threatintel.ThreatIntelPlugin",
                          "type": "plugin-version",
                          "version": ">=3.0.0-alpha.2",
                        }
                      }
                      formatter={[Function]}
                      index={0}
                      key="row-0"
                    >
                      <tr>
                        <td>
                          org.graylog.plugins.threatintel.ThreatIntelPlugin
                        </td>
                        <td>
                          plugin-version
                        </td>
                        <td>
                          &gt;=3.0.0-alpha.2
                        </td>
                        <td>
                          <ContentPackConstraints__StyledBadge>
                            <Component
                              className="c1"
                            >
                              <ForwardRef
                                className="c1"
                              >
                                <Badge__StyledBadge
                                  className="c1"
                                >
                                  <Badge
                                    bsClass="badge"
                                    className="c1"
                                    pullRight={false}
                                  >
                                    <span
                                      className="c1 badge"
                                    >
                                      <Icon
                                        name="times"
                                        type="solid"
                                      >
                                        <FontAwesomeIcon
                                          icon={
                                            Object {
                                              "iconName": "times",
                                              "prefix": "fas",
                                            }
                                          }
                                        >
                                          <svg
                                            className="svg-inline--fa fa-times"
                                          />
                                        </FontAwesomeIcon>
                                      </Icon>
                                    </span>
                                  </Badge>
                                </Badge__StyledBadge>
                              </ForwardRef>
                            </Component>
                          </ContentPackConstraints__StyledBadge>
                        </td>
                      </tr>
                    </DataTableElement>
                    <DataTableElement
                      element={
                        Object {
                          "fulfilled": undefined,
                          "type": "server-version",
                          "version": ">=3.0.0-alpha.2+af8d8e0",
                        }
                      }
                      formatter={[Function]}
                      index={1}
                      key="row-1"
                    >
                      <tr>
                        <td>
                          Graylog
                        </td>
                        <td>
                          server-version
                        </td>
                        <td>
                          &gt;=3.0.0-alpha.2+af8d8e0
                        </td>
                        <td>
                          <ContentPackConstraints__StyledBadge>
                            <Component
                              className="c1"
                            >
                              <ForwardRef
                                className="c1"
                              >
                                <Badge__StyledBadge
                                  className="c1"
                                >
                                  <Badge
                                    bsClass="badge"
                                    className="c1"
                                    pullRight={false}
                                  >
                                    <span
                                      className="c1 badge"
                                    >
                                      <Icon
                                        name="times"
                                        type="solid"
                                      >
                                        <FontAwesomeIcon
                                          icon={
                                            Object {
                                              "iconName": "times",
                                              "prefix": "fas",
                                            }
                                          }
                                        >
                                          <svg
                                            className="svg-inline--fa fa-times"
                                          />
                                        </FontAwesomeIcon>
                                      </Icon>
                                    </span>
                                  </Badge>
                                </Badge__StyledBadge>
                              </ForwardRef>
                            </Component>
                          </ContentPackConstraints__StyledBadge>
                        </td>
                      </tr>
                    </DataTableElement>
                  </tbody>
                </table>
              </DataTable__StyledTable>
            </div>
          </div>
        </div>
      </div>
    </DataTable>
  </div>
</ContentPackConstraints>
`;
